--- a/portfolio.html
+++ b/portfolio.html
@@ -147,7 +147,7 @@
                 <!--li>
                     <figure>
                         <img src="img/projects/project-1.jpg" alt="Portolio Image" />
-                        <div><span>Image Project</span></div>
+                        <div><span>Sistem Inventory UIN Jakarta</span></div>
                     </figure>
                 </li>
                 <!-- Portfolio Item Ends -->
