--- a/portfolio.html
+++ b/portfolio.html
@@ -147,7 +147,7 @@
                 <!--li>
                     <figure>
                         <img src="img/projects/project-1.jpg" alt="Portolio Image" />
-                        <div><span>Sistem Inventory UIN Jakarta</span></div>
+                        <div><span>Image Projecta</span></div>
                     </figure>
                 </li>
                 <!-- Portfolio Item Ends -->
@@ -219,7 +219,7 @@
                 <li>
                     <figure>
                         <img src="img/projects/porto1.png" alt="Portolio Image" />
-                        <div><span>Image Project</span></div>
+                        <div><span>Sistem Inventory UIN Jakarta</span></div>
                     </figure>
                 </li>
                 <!-- Portfolio Item Ends -->
@@ -227,7 +227,7 @@
                 <li>
                     <figure>
                         <img src="img/projects/porto2.png" alt="Portolio Image" />
-                        <div><span>Image Project</span></div>
+                        <div><span>Menu & Pemesanan Restaurant</span></div>
                     </figure>
                 </li>
                 <!-- Portfolio Item Ends -->
@@ -235,7 +235,7 @@
                 <li>
                     <figure>
                         <img src="img/projects/porto3.png" alt="Portolio Image" />
-                        <div><span>Image Project</span></div>
+                        <div><span>Website Cat Infomation</span></div>
                     </figure>
                 </li>
                 <!-- Portfolio Item Ends -->
@@ -243,7 +243,7 @@
                 <li>
                     <figure>
                         <img src="img/projects/serti1.jpg" alt="Portolio Image" />
-                        <div><span>Image Project</span></div>
+                        <div><span>Junior Programmer</span></div>
                     </figure>
                 </li>
                 <!-- Portfolio Item Ends -->
@@ -259,19 +259,19 @@
                 <li>
                     <figure>
                         <img src="img/projects/serti3.jpg" alt="Portolio Image" />
-                        <div><span>Image Project</span></div>
+                        <div><span>The Bits and Bytes of Computer Networking</span></div>
                     </figure>
                 </li>
                 <li>
                     <figure>
                         <img src="img/projects/serti4.jpg" alt="Portolio Image" />
-                        <div><span>Image Project</span></div>
+                        <div><span>Software Development Basic</span></div>
                     </figure>
                 </li>
                 <li>
                     <figure>
                         <img src="img/projects/sertif5.jpg" alt="Portolio Image" />
-                        <div><span>Image Project</span></div>
+                        <div><span>Javascript Basic</span></div>
                     </figure>
                 </li>
             </ul>
