--- a/portfolio.html
+++ b/portfolio.html
@@ -219,38 +219,6 @@
                 <li>
                     <figure>
                         <img src="img/projects/porto1.png" alt="Portolio Image" />
-                        <div><span>Sistem Inventory UIN Jakarta</span></div>
-                    </figure>
-                </li>
-                <!-- Portfolio Item Ends -->
-                <!-- Portfolio Item Starts -->
-                <li>
-                    <figure>
-                        <img src="img/projects/porto2.png" alt="Portolio Image" />
-                        <div><span>Menu & Pemesanan Restaurant</span></div>
-                    </figure>
-                </li>
-                <!-- Portfolio Item Ends -->
-                <!-- Portfolio Item Starts -->
-                <li>
-                    <figure>
-                        <img src="img/projects/porto3.png" alt="Portolio Image" />
-                        <div><span>Website Cat Infomation</span></div>
-                    </figure>
-                </li>
-                <!-- Portfolio Item Ends -->
-                <!-- Portfolio Item Starts -->
-                <li>
-                    <figure>
-                        <img src="img/projects/serti1.jpg" alt="Portolio Image" />
-                        <div><span>Junior Programmer</span></div>
-                    </figure>
-                </li>
-                <!-- Portfolio Item Ends -->
-                <!-- Portfolio Item Starts -->
-                <li>
-                    <figure>
-                        <img src="img/projects/serti2.jpg" alt="Portolio Image" />
                         <div><span>Image Project</span></div>
                     </figure>
                 </li>
@@ -258,20 +226,52 @@
                 <!-- Portfolio Item Starts -->
                 <li>
                     <figure>
+                        <img src="img/projects/porto2.png" alt="Portolio Image" />
+                        <div><span>Image Project</span></div>
+                    </figure>
+                </li>
+                <!-- Portfolio Item Ends -->
+                <!-- Portfolio Item Starts -->
+                <li>
+                    <figure>
+                        <img src="img/projects/porto3.png" alt="Portolio Image" />
+                        <div><span>Image Project</span></div>
+                    </figure>
+                </li>
+                <!-- Portfolio Item Ends -->
+                <!-- Portfolio Item Starts -->
+                <li>
+                    <figure>
+                        <img src="img/projects/serti1.jpg" alt="Portolio Image" />
+                        <div><span>Image Certificate</span></div>
+                    </figure>
+                </li>
+                <!-- Portfolio Item Ends -->
+                <!-- Portfolio Item Starts -->
+                <li>
+                    <figure>
+                        <img src="img/projects/serti2.jpg" alt="Portolio Image" />
+                        <div><span>Image Certificate</span></div>
+                    </figure>
+                </li>
+                <!-- Portfolio Item Ends -->
+                <!-- Portfolio Item Starts -->
+                <li>
+                    <figure>
                         <img src="img/projects/serti3.jpg" alt="Portolio Image" />
-                        <div><span>The Bits and Bytes of Computer Networking</span></div>
+                        <div><span>Image Certificate</span></div>
                     </figure>
                 </li>
                 <li>
                     <figure>
                         <img src="img/projects/serti4.jpg" alt="Portolio Image" />
-                        <div><span>Software Development Basic</span></div>
+                        <div><span>Image Certificate</span></div>
                     </figure>
                 </li>
                 <li>
                     <figure>
                         <img src="img/projects/sertif5.jpg" alt="Portolio Image" />
-                        <div><span>Javascript Basic</span></div>
+                        <div><span>Image Certificate</span></div>
                     </figure>
                 </li>
             </ul>
@@ -419,7 +419,7 @@
                     <figure>
                         <!-- Project Details Starts -->
                         <!--figcaption>
-                            <h3>Image Project</h3>
+                            <h3>Sistem Iventory UIN Jakarta</h3>
                             <div class="row open-sans-font">
                                 <div class="col-6 mb-2">
                                     <i class="fa fa-file-text-o pr-2"></i><span class="project-label">Project </span>: <span class="ft-wt-600 uppercase">Website</span>
@@ -447,7 +447,7 @@
                     <figure>
                         <!-- Project Details Starts -->
                         <!--figcaption>
-                            <h3>Image Project</h3>
+                            <h3>Menu & Pemesanan Restaurant</h3>
                             <div class="row open-sans-font">
                                 <div class="col-6 mb-2">
                                     <i class="fa fa-file-text-o pr-2"></i><span class="project-label">Project </span>: <span class="ft-wt-600 uppercase">Website</span>
@@ -475,7 +475,7 @@
                     <figure>
                         <!-- Project Details Starts -->
                         <!--figcaption>
-                            <h3>Image Project</h3>
+                            <h3>Cat Information Website</h3>
                             <div class="row open-sans-font">
                                 <div class="col-6 mb-2">
                                     <i class="fa fa-file-text-o pr-2"></i><span class="project-label">Project </span>: <span class="ft-wt-600 uppercase">Website</span>
@@ -503,7 +503,7 @@
                     <figure>
                         <!-- Project Details Starts -->
                         <!--figcaption>
-                            <h3>Image Project</h3>
+                            <h3>Junior Programmer</h3>
                             <div class="row open-sans-font">
                                 <div class="col-6 mb-2">
                                     <i class="fa fa-file-text-o pr-2"></i><span class="project-label">Project </span>: <span class="ft-wt-600 uppercase">Website</span>
@@ -531,7 +531,7 @@
                     <figure>
                         <!-- Project Details Starts -->
                         <!--figcaption>
-                            <h3>Image Project</h3>
+                            <h3>The Bits and Bytes of Computer Networking</h3>
                             <div class="row open-sans-font">
                                 <div class="col-6 mb-2">
                                     <i class="fa fa-file-text-o pr-2"></i><span class="project-label">Project </span>: <span class="ft-wt-600 uppercase">Website</span>
@@ -559,7 +559,7 @@
                     <figure>
                         <!-- Project Details Starts -->
                         <figcaption>
-                            <h3>Image Project</h3>
+                            <h3>Software Development Basic</h3>
                             <div class="row open-sans-font">
                                 <div class="col-6 mb-2">
                                 </div>
@@ -577,7 +577,7 @@
                     <figure>
                         <!-- Project Details Starts -->
                         <figcaption>
-                            <h3>Image Project</h3>
+                            <h3>Javascript Basic</h3>
                             <div class="row open-sans-font">
                                 <div class="col-6 mb-2">
                                 </div>
@@ -595,7 +595,7 @@
                     <figure>
                         <!-- Project Details Starts -->
                         <figcaption>
-                            <h3>Image Project</h3>
+                            <h3>Cybersecurity Essentials</h3>
                             <div class="row open-sans-font">
                                 <div class="col-6 mb-2">
                                     <i class="fa fa-external-link pr-2"></i><span class="project-label">Preview </span>: <span class="ft-wt-600 uppercase"><a href="#" target="_blank">www.envato.com</a></span>
