--- a/portfolio.html
+++ b/portfolio.html
@@ -147,7 +147,7 @@
                 <!--li>
                     <figure>
                         <img src="img/projects/project-1.jpg" alt="Portolio Image" />
-                        <div><span>Image Projecta</span></div>
+                        <div><span>Image Project</span></div>
                     </figure>
                 </li>
                 <!-- Portfolio Item Ends -->
@@ -219,7 +219,7 @@
                 <li>
                     <figure>
                         <img src="img/projects/porto1.png" alt="Portolio Image" />
-                        <div><span>Image Project</span></div>
+                        <div><span>Sistem Inventory UIN Jakarta</span></div>
                     </figure>
                 </li>
                 <!-- Portfolio Item Ends -->
@@ -243,7 +243,7 @@
                 <li>
                     <figure>
                         <img src="img/projects/serti1.jpg" alt="Portolio Image" />
-                        <div><span>Image Certificate</span></div>
+                        <div><span>Image Project</span></div>
                     </figure>
                 </li>
                 <!-- Portfolio Item Ends -->
@@ -251,7 +251,7 @@
                 <li>
                     <figure>
                         <img src="img/projects/serti2.jpg" alt="Portolio Image" />
-                        <div><span>Image Certificate</span></div>
+                        <div><span>Image Project</span></div>
                     </figure>
                 </li>
                 <!-- Portfolio Item Ends -->
@@ -259,19 +259,19 @@
                 <li>
                     <figure>
                         <img src="img/projects/serti3.jpg" alt="Portolio Image" />
-                        <div><span>Image Certificate</span></div>
+                        <div><span>Image Project</span></div>
                     </figure>
                 </li>
                 <li>
                     <figure>
                         <img src="img/projects/serti4.jpg" alt="Portolio Image" />
-                        <div><span>Image Certificate</span></div>
+                        <div><span>Image Project</span></div>
                     </figure>
                 </li>
                 <li>
                     <figure>
                         <img src="img/projects/sertif5.jpg" alt="Portolio Image" />
-                        <div><span>Image Certificate</span></div>
+                        <div><span>Image Project</span></div>
                     </figure>
                 </li>
             </ul>
@@ -419,7 +419,7 @@
                     <figure>
                         <!-- Project Details Starts -->
                         <!--figcaption>
-                            <h3>Sistem Iventory UIN Jakarta</h3>
+                            <h3>Image Project</h3>
                             <div class="row open-sans-font">
                                 <div class="col-6 mb-2">
                                     <i class="fa fa-file-text-o pr-2"></i><span class="project-label">Project </span>: <span class="ft-wt-600 uppercase">Website</span>
@@ -447,7 +447,7 @@
                     <figure>
                         <!-- Project Details Starts -->
                         <!--figcaption>
-                            <h3>Menu & Pemesanan Restaurant</h3>
+                            <h3>Image Project</h3>
                             <div class="row open-sans-font">
                                 <div class="col-6 mb-2">
                                     <i class="fa fa-file-text-o pr-2"></i><span class="project-label">Project </span>: <span class="ft-wt-600 uppercase">Website</span>
@@ -475,7 +475,7 @@
                     <figure>
                         <!-- Project Details Starts -->
                         <!--figcaption>
-                            <h3>Cat Information Website</h3>
+                            <h3>Image Project</h3>
                             <div class="row open-sans-font">
                                 <div class="col-6 mb-2">
                                     <i class="fa fa-file-text-o pr-2"></i><span class="project-label">Project </span>: <span class="ft-wt-600 uppercase">Website</span>
@@ -503,7 +503,7 @@
                     <figure>
                         <!-- Project Details Starts -->
                         <!--figcaption>
-                            <h3>Junior Programmer</h3>
+                            <h3>Image Project</h3>
                             <div class="row open-sans-font">
                                 <div class="col-6 mb-2">
                                     <i class="fa fa-file-text-o pr-2"></i><span class="project-label">Project </span>: <span class="ft-wt-600 uppercase">Website</span>
@@ -531,7 +531,7 @@
                     <figure>
                         <!-- Project Details Starts -->
                         <!--figcaption>
-                            <h3>The Bits and Bytes of Computer Networking</h3>
+                            <h3>Image Project</h3>
                             <div class="row open-sans-font">
                                 <div class="col-6 mb-2">
                                     <i class="fa fa-file-text-o pr-2"></i><span class="project-label">Project </span>: <span class="ft-wt-600 uppercase">Website</span>
@@ -559,7 +559,7 @@
                     <figure>
                         <!-- Project Details Starts -->
                         <figcaption>
-                            <h3>Software Development Basic</h3>
+                            <h3>Image Project</h3>
                             <div class="row open-sans-font">
                                 <div class="col-6 mb-2">
                                 </div>
@@ -577,7 +577,7 @@
                     <figure>
                         <!-- Project Details Starts -->
                         <figcaption>
-                            <h3>Javascript Basic</h3>
+                            <h3>Image Project</h3>
                             <div class="row open-sans-font">
                                 <div class="col-6 mb-2">
                                 </div>
@@ -595,7 +595,7 @@
                     <figure>
                         <!-- Project Details Starts -->
                         <figcaption>
-                            <h3>Cybersecurity Essentials</h3>
+                            <h3>Image Project</h3>
                             <div class="row open-sans-font">
                                 <div class="col-6 mb-2">
                                     <i class="fa fa-external-link pr-2"></i><span class="project-label">Preview </span>: <span class="ft-wt-600 uppercase"><a href="#" target="_blank">www.envato.com</a></span>
@@ -622,7 +622,7 @@
                         </figcaption>
                         <!-- Project Details Ends --
                         <!-- Main Project Content Starts -->
-                        <img src="img/projects/Alfanisa Safvira4.jpg" alt="Portolio Image" />
+                        <img src="img/projects/serti1.jpg" alt="Portolio Image" />
                         <!-- Main Project Content Ends -->
                     </figure>
                 </li>
@@ -640,7 +640,7 @@
                         </figcaption>
                         <!-- Project Details Ends --
                         <!-- Main Project Content Starts -->
-                        <img src="img/projects/Alfanisa Safvira5.jpg" alt="Portolio Image" />
+                        <img src="img/projects/serti2.jpg" alt="Portolio Image" />
                         <!-- Main Project Content Ends -->
                     </figure>
                 </li>
@@ -658,12 +658,49 @@
                         </figcaption>
                         <!-- Project Details Ends --
                         <!-- Main Project Content Starts -->
-                        <img src="img/projects/Alfanisa Safvira6.jpg" alt="Portolio Image" />
+                        <img src="img/projects/serti3.jpg" alt="Portolio Image" />
                         <!-- Main Project Content Ends -->
                     </figure>
                 </li>
                 <!-- Portfolio Item Detail Ends -->
-            </ul>
+            </ul><!-- Portfolio Item Detail Starts -->
+            <li>
+                <figure>
+                    <!-- Project Details Starts -->
+                    <figcaption>
+                        <h3>Image Project</h3>
+                        <div class="row open-sans-font">
+                            <div class="col-6 mb-2">
+                            </div>
+                        </div>
+                    </figcaption>
+                    <!-- Project Details Ends --
+                    <!-- Main Project Content Starts -->
+                    <img src="img/projects/serti4.jpg" alt="Portolio Image" />
+                    <!-- Main Project Content Ends -->
+                </figure>
+            </li>
+            <!-- Portfolio Item Detail Ends -->
+        </ul>
+            <!-- Portfolio Item Detail Starts -->
+            <li>
+                <figure>
+                    <!-- Project Details Starts -->
+                    <figcaption>
+                        <h3>Image Project</h3>
+                        <div class="row open-sans-font">
+                            <div class="col-6 mb-2">
+                            </div>
+                        </div>
+                    </figcaption>
+                    <!-- Project Details Ends --
+                    <!-- Main Project Content Starts -->
+                    <img src="img/projects/serti5.jpg" alt="Portolio Image" />
+                    <!-- Main Project Content Ends -->
+                </figure>
+            </li>
+            <!-- Portfolio Item Detail Ends -->
+        </ul>
             <nav>
                 <span class="icon nav-prev"><img src="img/projects/navigation/left-arrow.png" alt="previous"></span>
                 <span class="icon nav-next"><img src="img/projects/navigation/right-arrow.png" alt="next"></span>
