--- a/portfolio.html
+++ b/portfolio.html
@@ -219,7 +219,7 @@
                 <li>
                     <figure>
                         <img src="img/projects/porto1.png" alt="Portolio Image" />
-                        <div><span>Sistem Inventory UIN Jakarta</span></div>
+                        <div><span>Image Project</span></div>
                     </figure>
                 </li>
                 <!-- Portfolio Item Ends -->
@@ -243,7 +243,7 @@
                 <li>
                     <figure>
                         <img src="img/projects/serti1.jpg" alt="Portolio Image" />
-                        <div><span>Image Project</span></div>
+                        <div><span>Image Certificate</span></div>
                     </figure>
                 </li>
                 <!-- Portfolio Item Ends -->
@@ -251,7 +251,7 @@
                 <li>
                     <figure>
                         <img src="img/projects/serti2.jpg" alt="Portolio Image" />
-                        <div><span>Image Project</span></div>
+                        <div><span>Image Certificate</span></div>
                     </figure>
                 </li>
                 <!-- Portfolio Item Ends -->
@@ -259,19 +259,19 @@
                 <li>
                     <figure>
                         <img src="img/projects/serti3.jpg" alt="Portolio Image" />
-                        <div><span>Image Project</span></div>
+                        <div><span>Image Certificate</span></div>
                     </figure>
                 </li>
                 <li>
                     <figure>
                         <img src="img/projects/serti4.jpg" alt="Portolio Image" />
-                        <div><span>Image Project</span></div>
+                        <div><span>Image Certificate</span></div>
                     </figure>
                 </li>
                 <li>
                     <figure>
                         <img src="img/projects/sertif5.jpg" alt="Portolio Image" />
-                        <div><span>Image Project</span></div>
+                        <div><span>Image Certificate</span></div>
                     </figure>
                 </li>
             </ul>
@@ -559,7 +559,7 @@
                     <figure>
                         <!-- Project Details Starts -->
                         <figcaption>
-                            <h3>Image Project</h3>
+                            <h3>Sistem Inventory UIN Jakarta</h3>
                             <div class="row open-sans-font">
                                 <div class="col-6 mb-2">
                                 </div>
@@ -577,7 +577,7 @@
                     <figure>
                         <!-- Project Details Starts -->
                         <figcaption>
-                            <h3>Image Project</h3>
+                            <h3>Menu & Pemesanan Warkop</h3>
                             <div class="row open-sans-font">
                                 <div class="col-6 mb-2">
                                 </div>
@@ -595,7 +595,7 @@
                     <figure>
                         <!-- Project Details Starts -->
                         <figcaption>
-                            <h3>Image Project</h3>
+                            <h3>>Cat Infomation Website</h3>
                             <div class="row open-sans-font">
                                 <div class="col-6 mb-2">
                                     <i class="fa fa-external-link pr-2"></i><span class="project-label">Preview </span>: <span class="ft-wt-600 uppercase"><a href="#" target="_blank">www.envato.com</a></span>
@@ -614,7 +614,7 @@
                     <figure>
                         <!-- Project Details Starts -->
                         <figcaption>
-                            <h3>Image Project</h3>
+                            <h3>Junior Programmer</h3>
                             <div class="row open-sans-font">
                                 <div class="col-6 mb-2">
                                 </div>
@@ -632,7 +632,7 @@
                     <figure>
                         <!-- Project Details Starts -->
                         <figcaption>
-                            <h3>Image Project</h3>
+                            <h3>The Bits and Bytes of Computer Networking</h3>
                             <div class="row open-sans-font">
                                 <div class="col-6 mb-2">
                                 </div>
@@ -650,7 +650,7 @@
                     <figure>
                         <!-- Project Details Starts -->
                         <figcaption>
-                            <h3>Image Project</h3>
+                            <h3>Software Development BasicImage Project</h3>
                             <div class="row open-sans-font">
                                 <div class="col-6 mb-2">
                                 </div>
@@ -668,7 +668,7 @@
                 <figure>
                     <!-- Project Details Starts -->
                     <figcaption>
-                        <h3>Image Project</h3>
+                        <h3>Javascript Basic</h3>
                         <div class="row open-sans-font">
                             <div class="col-6 mb-2">
                             </div>
@@ -687,7 +687,7 @@
                 <figure>
                     <!-- Project Details Starts -->
                     <figcaption>
-                        <h3>Image Project</h3>
+                        <h3>Cybersecurity Essentials</h3>
                         <div class="row open-sans-font">
                             <div class="col-6 mb-2">
                             </div>
