--- a/portfolio.html
+++ b/portfolio.html
@@ -270,7 +270,7 @@
                 </li>
                 <li>
                     <figure>
-                        <img src="img/projects/sertif5.jpg" alt="Portolio Image" />
+                        <img src="img/projects/serti5.jpg" alt="Portolio Image" />
                         <div><span>Image Certificate</span></div>
                     </figure>
                 </li>
@@ -595,7 +595,7 @@
                     <figure>
                         <!-- Project Details Starts -->
                         <figcaption>
-                            <h3>>Cat Infomation Website</h3>
+                            <h3>Cat Infomation Website</h3>
                             <div class="row open-sans-font">
                                 <div class="col-6 mb-2">
                                     <i class="fa fa-external-link pr-2"></i><span class="project-label">Preview </span>: <span class="ft-wt-600 uppercase"><a href="#" target="_blank">www.envato.com</a></span>
@@ -650,7 +650,7 @@
                     <figure>
                         <!-- Project Details Starts -->
                         <figcaption>
-                            <h3>Software Development BasicImage Project</h3>
+                            <h3>Software Development Basic</h3>
                             <div class="row open-sans-font">
                                 <div class="col-6 mb-2">
                                 </div>
