--- a/portfolio.html
+++ b/portfolio.html
@@ -262,12 +262,16 @@
                         <div><span>Image Certificate</span></div>
                     </figure>
                 </li>
+                <!-- Portfolio Item Ends -->
+                <!-- Portfolio Item Starts -->
                 <li>
                     <figure>
                         <img src="img/projects/serti4.jpg" alt="Portolio Image" />
                         <div><span>Image Certificate</span></div>
                     </figure>
                 </li>
+                <!-- Portfolio Item Ends -->
+                <!-- Portfolio Item Starts -->
                 <li>
                     <figure>
                         <img src="img/projects/serti5.jpg" alt="Portolio Image" />
@@ -662,8 +666,8 @@
                     </figure>
                 </li>
                 <!-- Portfolio Item Detail Ends -->
-            </ul><!-- Portfolio Item Detail Starts -->
-            <li>
+                <!-- Portfolio Item Detail Starts -->
+                <li>
                 <figure>
                     <!-- Project Details Starts -->
                     <figcaption>
@@ -680,7 +684,6 @@
                 </figure>
             </li>
             <!-- Portfolio Item Detail Ends -->
-        </ul>
             <!-- Portfolio Item Detail Starts -->
             <li>
                 <figure>
