--- a/about.html
+++ b/about.html
@@ -171,7 +171,7 @@
                         </ul>
                     </div>
                     <div class="col-12 mt-3">
-                        <a href="CV_Alfanisa Safvira.pdf" class="btn btn-download" download="CV_Alfanisa Safvira.pdf">Download CV</a>
+                        <a href="cv_alfanisa.pdf" class="btn btn-download" download="cv_alfanisa.pdf">Download CV</a>
                     </div>
                 </div>
             </div>
